--- a/style/dashboard.css
+++ b/style/dashboard.css
@@ -1,3 +1,5 @@
+html, body, main, #root, .dash-container { height: 100%; }
+body, main { display: flex; flex-direction: column; }
 .motivation-dash-block { margin-bottom: 20px; }
 .dash-container { display: grid; gap: 20px; }
 body:not(.student):not(.teacher):not(.parent) .dash-block { display: none; }
@@ -18,7 +20,7 @@ body:not(.student):not(.teacher):not(.parent) .dash-block { display: none; }
 .dash-block .dash-block-title h3 i { margin-right: 7.5px; }
 .dash-block-content { margin: 5px 0 0 0; flex: 1 1 auto; }
 #markGraph:not([src]) { display: none; }
-#markGraph[src] { width: 100%; min-height: 200px; height: 100%; margin: 0; padding: 0; border: none; }
+#markGraph[src] { width: 100%; height: 100%; margin: 0; padding: 0; border: none; }
 .notification { white-space: nowrap; display: flex; }
 .notification p { white-space: normal; }
 .day:not(:nth-last-child(1)), .notification:not(:nth-last-child(1)) { margin-bottom: 15px; }
@@ -70,7 +72,6 @@ body.teacher .marks-dash-block { display: none }
 @media (min-width: 801px) {
     .notification .delete-notification { visibility: hidden; }
     .notification:hover .delete-notification { visibility: visible; }
-    .dash-block-content { overflow-x: hidden; overflow-y: auto; height: 60vh; }
     body .dash-container { grid-template-columns: 2.25fr 1fr 1fr; }
     body.teacher .dash-container { grid-template-columns: 1fr 1fr 1fr; }
 }
